# webgenesis

./: 404.html  README.md  README.rst  index.html  mkdocs.yml  pyproject.toml  search.html  sitemap.xml
docs/: index.md
search/: search_index.json
tests/: test_webgenesis.py
webgenesis/: webgenesis.py
