[tool.poetry]
name = "webgenesis"
version = "0.0.1"
description = "create basic hello-world apps for the various web frameworks as boiler plates"
authors = ["Jesse E.Agbe(JCharis) <jcharistech@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jcharistech/webgenesis"
repository = "https://github.com/jcharistech/webgenesis"
keywords = ["webgenesis","webkit","cookiecutter","jcharistech", "web microframeworks","flask","hello world app","streamlit"]

classifiers=[
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.6",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Operating System :: OS Independent",
    ]


[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
webgenesis = "webgenesis.webgenesis:main"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
